--- a/index.html
+++ b/index.html
@@ -4,26 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Data/w_styles.css">
-    <title>Shan's Profile</title>
+    <link rel="shortcut icon" href="Data/img/star.png" type="image/png">
 </head>
 <body>
     <div>
         <h1>Welcome to my profile page</h1>
     </div>
-    
-    <div class="divSummary"><hr>
-    <p>
-Hey! There.<br><br>
+    <img src="Data/img/giphy.webp" height="10%" width="10%"><br>
+    <table class="w_table" border="1" width="100%">
+        <tr>
+            <td><a href="./index.html">About me</a> </td>
+            <td><a href="./contactme_form.html">Contact me</a> </td>
+        </tr>
+    </table><hr>
+Hey! There...<br><br>
 Thanks for showing interest in my profile to see what im been with.<br>
-Here ill do the full stack development - a [<b>Active Recall</b>] progress.<br>
-Not only that - i can able to manage the Red Hat server as admin and act as an Application Support engineer for a IoT Marine projects.<br><br>
+Here ill do the full stack development - a [<b>Active Recall</b>] progress.<br><br>
+Not only that - i can able to manage the following roles,
+<ul>
+<li>Red Hat server as admin </li>
+<li>Application Support engineer for a IoT Marine projects</li>
+</ul>
 Lets keep this simple and Thank you again!<br><br>
 Have a good day!
-    </p><hr>
+    </p>
+    <footer>
+    <div><hr>
+<table class="w_table" border="1" width="100%">
+    <tbody>
+        My links as follows!
+        <tr>
+            <td>
+                <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram</a>
+            </td>
+            <td>
+                <a href="https://www.linkedin.com/in/shanthosh-k/" target="_blank">Linkedin</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
     </div>
-    <div>
-        <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram</a>
-        <a href="https://www.linkedin.com/in/shanthosh-k/" target="_blank">Linkedin</a>
-    </div>
+</footer>
 </body>
 </html>
