--- a/contactme_form.html
+++ b/contactme_form.html
@@ -17,12 +17,23 @@
         </tr>
     </table><hr>
 <div>
-    <form>
-        <input type="text">
-        <input type="email" name="emailid" id="mlid">
-        <textarea name="MoreInfo" id="moreinfo"></textarea>
+    <form action="" method="get">
+        <select required aria-placeholder="Mrs/Mr">
+            <option disabled>--Disabled</option>
+            <option>Mr</option>
+            <option>Mrs</option>
+        </select>
+        <input type="text" required placeholder="your name"><br><br>
+        <select required aria-placeholder="Gender">
+            <option disabled>Select your gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+        </select>
+        <input type="email" name="emailid" placeholder="email id here" id="mlid"><br><br>
+        <textarea name="MoreInfo" placeholder="Description" id="moreinfo"></textarea><br>
         <input type="submit" value="Send">
-    </form>
+    </form><br>
+    <iframe width="360" height="205" src="https://www.youtube.com/embed/Ys7ND2Dv3a0?si=etxHxAHaK8sOoxt1" title="Sample YouTube video player" frameborder="1" allow="accelerometer;" allowfullscreen></iframe>
 </div>
     <footer>
         <div><hr>
@@ -31,7 +42,7 @@
             My links as follows!
             <tr>
                 <td>
-                    <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram &copy;</a>
                 </td>
                 <td>
                     <a href="https://www.linkedin.com/in/shanthosh-k/" target="_blank">Linkedin</a>
