--- a/index.html
+++ b/index.html
@@ -29,21 +29,22 @@ Lets keep this simple and Thank you again!<br><br>
 Have a good day!
     </p>
     <footer>
-    <div><hr>
-<table class="w_table" border="1" width="100%">
-    <tbody>
-        My links as follows!
-        <tr>
-            <td>
-                <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram</a>
-            </td>
-            <td>
-                <a href="https://www.linkedin.com/in/shanthosh-k/" target="_blank">Linkedin</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
-    </div>
-</footer>
+        <div><hr>
+    <table class="w_table" border="1" width="100%">
+        <tbody>
+            My links as follows!
+            <tr>
+                <td>
+                    <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram &copy;</a>
+                </td>
+                <td>
+                    <a href="https://www.linkedin.com/in/shanthosh-k/" target="_blank">Linkedin</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+        </div>
+    </footer>
+
 </body>
 </html>
