--- a/project_1/main.html
+++ b/project_1/main.html
@@ -14,7 +14,7 @@
                 <img src="/Data/img/icons/s-logo.png" alt="" sizes="90%">
             </div>
             <div class="title">
-                SHAN'Man
+                SHAN'Mans
             </div>
         </div>
         <div style="padding-left: 5%;">
