--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ Have a good day!
             My links as follows!
             <tr>
                 <td>
-                    <a href="https://www.instagram.com/shan.4k" target="_blank">Instagram &copy;</a>
+                    <a href="https://www.instagram.com/" target="_blank">Instagram &copy;</a>
                 </td>
                 <td>
-                    <a href="https://www.linkedin.com/in/shanthosh-k/" target="_blank">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/" target="_blank">Linkedin</a>
                 </td>
             </tr>
         </tbody>
