--- a/project_1/main.html
+++ b/project_1/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <div>
-    <div class="headerr">
+    <div class="headerr nav-links nav-top">
         <div class="h-title">
             <div class="logo">
                 <img src="/Data/img/icons/s-logo.png" alt="" sizes="90%">
@@ -27,18 +27,17 @@
             <a href="pages/courses.html">Shan's Course</a>
         </div>
     </div>  
-    <hr>
 </div>
 <body>
-<div class="flex1">
-    <span>
-        <h1>Supreme Camera Maintenance</h1>
-        <h2>Your Camera is your $1,000,000 baby. We get that.</h2>
-    </span><br>
-    <span>
-        <button id="cbtn">CONTACT US</button>
-    </span>
-</div>
+    <div class="flex1">
+        <span>
+            <h1>Supreme Camera Maintenance</h1>
+            <h2>Your Camera is your $1,000,000 baby. We get that.</h2>
+        </span><br>
+        <span>
+            <button id="cbtn">CONTACT US</button>
+        </span>
+    </div>
 </body>
 <div id="footer-placeholder"></div>
 
