--- a/project_1/pages/footer.html
+++ b/project_1/pages/footer.html
@@ -15,16 +15,28 @@
     </table>
     </div>
     <div class="footer2">
-    <div class="f_div">
-        <h3>LINKS</h3>
-        <a href="pages/services.html">Services</a><br>
-        <a href="pages/contact.html">Contact</a><br>
-        <a href="pages/courses.html">Shan's Course</a>
-    </div>
-    <div class="f_div">
-        <h3>CONTACT US</h3>
-        <p>Contact me at <br> 
-        <a href="mailto:ksanthosh95@gmail.com">Shan</a></p>
-    </div>
+        <div class="f_div nav-links">
+            <h3>LINKS</h3>
+            <a href="pages/services.html">Services</a><br>
+            <a href="pages/contact.html">Contact</a><br>
+            <a href="pages/courses.html">Shan's Course</a>
+        </div>
+        <div class="f_div">
+            <h3>CONTACT US</h3>
+            <p>Contact me at <br> 
+            <a href="mailto:k@gmail.com">Shan</a></p>
+        </div>
+        <div class="f_div">
+            <h3>HOURS</h3>
+            <p>Monday-Friday <br> 
+            10AM ~ 06PM</p>
+        </div>
+        <div class="f_div">
+            <p> 
+                <h3>SOCIAL</h3>
+                <a href="https://www.instagram.com/" target="_blank">Instagram</a> <br> 
+                <a href="https://www.linkedin.com/in/" target="_blank">Linkedin</a>
+            </p>
+        </div>
     </div>
     </footer>
